--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "babel-loader": "^9.1.3",
     "css-loader": "^7.1.1",
     "csv-loader": "^3.0.5",
     "html-webpack-plugin": "^5.6.0",
